<resources>
    <string name="app_name">Notes</string>
    <string name="folders">Folders</string>
    <string name="notes">Notes</string>
    <string name="note_detail">Note Details</string>
    <string name="title_activity_notes">NotesActivity</string>
    <string name="edit_note">Edit note</string>
    <string name="note_title_hint">Enter title</string>
    <string name="note_text_hint">Enter note text</string>
    <string name="save_btn_text">Save</string>
    <string name="edit_folder">Edit folder</string>
    <string name="folder_title_hint">Enter folder name</string>
    <string name="settings">Settings</string>
    <string name="folder_restore">Restore folders</string>
    <string name="folder_restore_desc">Allows you to restore deleted folders with notes inside</string>
    <string name="note_restore">Restore notes</string>
    <string name="note_restore_desc">Allows you to restore deleted individual notes</string>
    <string name="note_untitled">Untitled</string>
    <string name="error_simple">Error occurred</string>
</resources>